package br.com.elo7.mars.explorer.engine.domain.action;

import br.com.elo7.mars.explorer.engine.domain.explorer.ExplorerPosition;

/**
 *
 * @author pedrotoliveira
 */
public final class TurnRight implements MoveAction {

	@Override
	public ExplorerPosition execute(ExplorerPosition currentPosition) {
		throw new UnsupportedOperationException("Not supported yet.");
	}	
}
