package br.com.elo7.mars.explorer.engine.model;

/**
 *
 * A Collection of Instructions Execution.
 * 
 * @author pedrotoliveira
 */
public class ExecutionResult {	
}
