package br.com.elo7.mars.explorer.engine.model.factory;

import br.com.elo7.mars.explorer.engine.model.Explorer;
import br.com.elo7.mars.explorer.engine.model.Factory;

/**
 *
 * @author pedrotoliveira
 */
public class ExplorerFactory implements Factory<Explorer> {

	@Override
	public Explorer create(String input) {		
		throw new UnsupportedOperationException("Not supported yet.");
	}	
}
