package br.com.elo7.mars.explorer.engine.model;

import java.util.Collection;

/**
 *
 * @author pedrotoliveira
 */
public class InstructionCollectionFactory implements Factory<Collection<Instruction>> {

	@Override
	public Collection<Instruction> create(String input) {
		throw new UnsupportedOperationException("Not supported yet.");
	}
	
}
