package br.com.elo7.mars.explorer.engine.model;

/**
 * Encapsulate 
 * 
 * @author pedrotoliveira
 */
public class SurfaceFactory implements Factory<Surface> {

	@Override
	public Surface create(String input) {
		throw new UnsupportedOperationException("Not supported yet.");
	}	
}
